# backend/docs/swagger.yaml
@@ -1,5 +1,15 @@
 basePath: /api/v1
 definitions:
+  controllers.LoginRequest:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - password
+    - username
+    type: object
   controllers.RefreshRequest:
     properties:
       refresh_token:
@@ -174,6 +184,36 @@ paths:
       summary: 删除知识库
       tags:
       - KnowledgeBase
+  /login:
+    post:
+      consumes:
+      - application/json
+      description: 用户输入账号和密码进行登录，成功后返回短令牌 (accessToken) 和长令牌 (refreshToken)
+      parameters:
+      - description: 登录账号和密码
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: 参数错误
+          schema:
+            $ref: '#/definitions/models.Response'
+        "401":
+          description: 账号或密码错误
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: 用户登录
+      tags:
+      - 认证 (Auth)
   /refresh:
     post:
       consumes:
